# SasRMC

./: .gitignore  LICENSE  README.md  figure_fits.py  main.py  pyproject.toml  requirements.txt  setup.py
data/: CoreShell F20 pol.xlsx  CoreShell Simulation Input - Copy - Copy.xlsx  CoreShell Simulation Input - Copy.xlsx  CoreShell Simulation Input.xlsx  CoreShell_F20_pol.xlsx  config.yaml
sas_rmc/: __init__.py  acceptance_scheme.py  array_cache.py  box_simulation.py  command_writer.py  commands.py  constants.py  controller.py  converters.py  detector.py  evaluator.py  fitter.py  form_calculator.py  logger.py  main.py  particle.py  polarizer.py  profile_calculator.py  result_calculator.py  rmc_runner.py  scattering_simulation.py  shapes.py  simulator.py  simulator_factory.py  template_generator.py  vector.py  viewer.py
sas_rmc/data/: config.yaml
sas_rmc/factories/: acceptable_command_factory.py  annealing_config.py  box_factory.py  command_factory.py  controller_factory.py  detector_builder.py  detector_factory.py  evaluator_factory.py  logger_factory.py  parse_data.py  particle_factory.py  particle_factory_cylindrical.py  runner_factory.py  runner_factory_test.py  simulation_factory.py  simulator_factory.py  spherical_particle_factory.py
sas_rmc/loggers/: __init__.py  box_plotter.py  click_logger.py  detector_image_plotter.py  excel_logger.py  logger.py  profile_plotter.py
tests/: array_cache_test.py  average_number_of_nearest_neighbours.py  figure_fits.py  fitting_test.py  porous_particles.py  random_tests.py  simulation_test.py  vector_test.py
(+15 files in other folders)
