[tool.poetry]
name = "sas-rmc"
version = "0.1.1"
description = "SasRMC is a Python library for numerical modelling of small-angle scattering data."
authors = ["Lester Barnsley <lester.barnsley@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "sas_rmc" },
    ]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.1"
scipy = "^1.12.0"
PyYAML = "^6.0.1"
matplotlib = "^3.8.3"
openpyxl = "^3.1.2"
ipython = "^8.22.2"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
