[tool.poetry]
name = "sas-rmc"
version = "0.1.8"
description = "SasRMC is a Python library for numerical modelling of small-angle scattering data."
authors = ["Lester Barnsley <lester.barnsley@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "sas_rmc" },
    ]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
scipy = "^1.12.0"
PyYAML = "^6.0.1"
matplotlib = "^3.8.3"
openpyxl = "^3.1.2"
pytest = "^8.1.1"
ipykernel = "^6.29.3"
pydantic = "^2.8.2"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sasrmc = "sas_rmc.main:cli"
